# vestro-jpg

./: .swp  Dockerfile  render.yaml  requirements.txt
VESTRO-BACKEND/: .env  requirements.txt
VESTRO-BACKEND/app/: config.py
VESTRO-BACKEND/app/pipeline/: features.py
VESTRO-BACKEND/app/routes/: __init__.py  api.py
VESTRO-BACKEND/app/scrapers/: __init__.py  linkedin.py  news.py
VESTRO-BACKEND/app/workers/: __init__.py
VESTRO-BACKEND/ml/: train.py
mt5-dashboard/: index.html  package-lock.json  package.json
mt5-dashboard/forex-bot/: check_symbol_info.py  config.yaml  requirements.txt  run.py
mt5-dashboard/forex-bot/bridge/: api_server.py  backtester.py  boom_crash.py  bot.py  crash500_scalper.py  mt5_connector.py  news_filter.py  risk_manager.py  run_bridge.py  signal_bridge.py  signal_bridge_py.py  trade_executor.py  v75.py
mt5-dashboard/forex-bot/db/: journal.py  models.py  trades.db
mt5-dashboard/forex-bot/engine/: CMakeLists.txt  indicators.cpp  signals.cpp
mt5-dashboard/forex-bot/tests/: test_indicators.py  test_journal.py  test_risk_manager.py
mt5-dashboard/src/: App.jsx  index.css
mt5-dashboard/src/components/: AccountBar.jsx  NewsBar.jsx  (+4 more)
vestro_backend/: .env  .env.example  migrate_outcome.py  requirements.txt  seed_firms.py  vestro.db
vestro_backend/app/: database.py  db.py  main.py  models.py
vestro_backend/ml/: __init__.py  calibration_loader.py  calibration_trainer.py  class_balancer.py  feature_engineering.py  outcome_labeler.py  regime_detector.py  retrain.py  signal_log_model.py  signal_logger.py  walk_forward_validator.py
(+37 files in other folders)
